pasta js inserida e codigo comentado

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 <body>
     <header>
+        <!-- inicio nav -->
         <nav class="navbar navbar-expand-sm d-flex justify-content-around">
             <a href="#" class="mr-5">
                 <img src="assets/logo.svg" alt="#" width="75" class="img-fluid">
@@ -49,9 +50,11 @@
                 <a class="nav-link"><i class="fa-solid fa-bars"></i></a>
             </p>
         </nav>
+        <!-- fim nav -->
     </header>
 
     <section id="p1">
+        <!-- Inicio Produto -->
         <div class="container d-md-flex">
             <div class="row">
                 <div class="col" style="margin-top: 25%;">
@@ -72,6 +75,7 @@
             </div>
 
             <div class="row">
+                <!-- Inicio Coluna Textos -->
                 <div class="col d-flex flex-column colunaTextos">
                     <h3 class="produtoTitulo ">HYPER X ON-EAR</h3>
                     <p class="produtoTexto mt-4">Fones de ouvido sem fio</p>
@@ -98,9 +102,11 @@
                     </div>
                 </div>
             </div>
+            <!-- Fim Coluna Textos -->
         </div>
+        <!-- Fim Produto -->
 
-
+        <!-- Rodapé Produto -->
         <div class="container rodapeProduto">
             <div class="row">
                 <div class="d-flex justify-content-between flex-column flex-sm-row">
@@ -126,9 +132,11 @@
                 </div>
             </div>
         </div>
+        <!--  Fim Rodapé Produto -->
     </section>
 
     <section id="p2">
+        <!-- Inicio Produto -->
         <div class="container d-md-flex">
             <div class="row">
                 <div class="col-12 mt-5 divFone2">
@@ -137,6 +145,7 @@
             </div>
 
             <div class="row">
+                <!-- Inicio Coluna Textos -->
                 <div class="col d-flex flex-column colunaTextos2">
                     <h3 class="produtoTitulo">HYPER X2 ON-EAR</h3>
                     <p class="produtoTexto mt-4">Fones de ouvido sem fio</p>
@@ -162,14 +171,15 @@
                         <button class="btn botao ">Adicionar ao carrinho</button>
                     </div>
                 </div>
+                <!-- Fim Coluna Textos -->
             </div>
         </div>
+        <!-- Fim Produto -->
 
-
+        <!-- Rodapé Produto -->
         <div class="container rodapeProduto">
             <div class="row">
                 <div class="d-flex justify-content-between flex-column flex-sm-row">
-
                     <div class="col-4 produtoRodapeItem ">
                         <svg xmlns="http://www.w3.org/2000/svg " width="16 " height="16 " fill="#fff " class="bi bi-bluetooth " viewBox="0 0 16 16 ">
                         <path fill-rule="evenodd " d="m8.543 3.948 1.316 1.316L8.543 6.58V3.948Zm0 8.104 1.316-1.316L8.543 9.42v2.632Zm-1.41-4.043L4.275 5.133l.827-.827L7.377 6.58V1.128l4.137 4.136L8.787 8.01l2.745 2.745-4.136 4.137V9.42l-2.294 2.274-.827-.827L7.133
@@ -191,9 +201,11 @@
                 </div>
             </div>
         </div>
+        <!-- Fim Rodapé Produto -->
     </section>
 
     <section id="p3">
+        <!-- Inicio Produto -->
         <div class="container d-md-flex">
             <div class="row">
                 <div class="col-12 mt-5 divFone2">
@@ -202,6 +214,7 @@
             </div>
 
             <div class="row">
+                <!-- Inicio Coluna Textos -->
                 <div class="col d-flex flex-column colunaTextos2">
                     <h3 class="produtoTitulo">HYPER X3 ON-EAR</h3>
                     <p class="produtoTexto mt-4">Fones de ouvido sem fio</p>
@@ -227,10 +240,11 @@
                         <button class="btn botao ">Adicionar ao carrinho</button>
                     </div>
                 </div>
+                <!-- Fim Coluna Textos -->
             </div>
         </div>
 
-
+        <!-- Inicio Rodapé Produto -->
         <div class="container rodapeProduto">
             <div class="row">
                 <div class="d-flex justify-content-between flex-column flex-sm-row">
@@ -255,13 +269,15 @@
 
                 </div>
             </div>
+            <!-- Fim Rodapé Produto -->
         </div>
+        <!-- Fim Produto -->
     </section>
 
 
 
-
-    <script src="main.js "></script>
+    <!-- Import do Arquivo Javascript -->
+    <script src="js/main.js "></script>
 </body>
 
 </html>
